--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,19 @@ coverage
 coveralls
 pep8
 scipy
+matplotlib
+ipython
 pandas
+sympy
+affine>=1.3.0
+attrs>=16.0.0
+click==7.0
+cligj>=0.5
+Cython
+h5py
+netCDF4
+Shapely
+zarr
+xarray
 jupyter
+setuptools>=0.9.8
